--- a/examples/semantic3d.ipynb
+++ b/examples/semantic3d.ipynb
@@ -2,14 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import open3d\n",
-    "import os\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def read_semantic3d_point_cloud(point_cloud_path):\n",
+    "    points_and_colors = np.loadtxt(point_cloud_path)\n",
+    "    np_points = points_and_colors[:, :3]\n",
+    "    np_colors = points_and_colors[:, 4:] / 255.\n",
+    "    point_cloud = open3d.PointCloud()\n",
+    "    point_cloud.points = open3d.Vector3dVector(np_points)\n",
+    "    point_cloud.colors = open3d.Vector3dVector(np_colors)\n",
+    "    return point_cloud\n",
     "\n",
+    "def read_semantic3d_label_colors(label_path):\n",
+    "    labels = np.loadtxt(label_fileel_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "data_root = \"/home/ylao/data/semantic3d\"\n",
     "point_cloud_file = \"bildstein_station1_xyz_intensity_rgb.txt\"\n",
     "label_file = \"bildstein_station1_xyz_intensity_rgb.labels\""
@@ -17,26 +43,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "point_cloud = read_semantic3d_point_cloud(os.path.join(data_root, point_cloud_file))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rgb_colors = np.asarray(point_cloud.colors)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/ylao/data/semantic3d/bildstein_station1_xyz_intensity_rgb.txt\n",
-      "PointCloud with 20 points.\n"
+     "ename": "KeyError",
+     "evalue": "8.0",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-23-e75a1e64099e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0;36m7\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m128\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m128\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m128\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;31m# gray\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m }\n\u001b[0;32m---> 14\u001b[0;31m \u001b[0mlabel_colors\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mmap_label_to_rgb\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mlabel\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mlabel\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlabels\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-23-e75a1e64099e>\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0;36m7\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m128\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m128\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m128\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;31m# gray\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m }\n\u001b[0;32m---> 14\u001b[0;31m \u001b[0mlabel_colors\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mmap_label_to_rgb\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mlabel\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mlabel\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlabels\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m: 8.0"
      ]
     }
    ],
    "source": [
-    "point_cloud_path = os.path.join(data_root, point_cloud_file)\n",
-    "rgb_point_cloud = open3d.read_point_cloud(point_cloud_path, format='xyzrgb')\n",
-    "\n",
-    "\n",
-    "print(point_cloud_path)\n",
-    "print(rgb_point_cloud)"
+    "label_path = os.path.join(data_root, label_file)\n",
+    "labels = np.loadtxt(label_path)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "map_label_to_rgb = [\n",
+    "    [255, 255, 255], # 0 white, unlabled\n",
+    "    [0, 0, 255],     # 1 Blue\n",
+    "    [0, 255, 0],     # 2 Lime (Green), fixed\n",
+    "    [0, 255, 255],   # 3 Cyan\n",
+    "    [255, 0, 255],   # 4 Magenta\n",
+    "    [255, 0, 0],     # 5 Red\n",
+    "    [255, 255, 0],   # 6 Yellow\n",
+    "    [255, 128, 0],   # 7 Orange\n",
+    "    [128, 128, 128], # 8 Gray\n",
+    "    [128, 0, 0],     # 9 Maroon              \n",
+    "]\n",
+    "label_colors = np.array([map_label_to_rgb[int(label)] for label in labels])\n",
+    "label_colors = label_colors / 255.\n",
+    "point_cloud.colors = open3d.Vector3dVector(label_colors)\n",
+    "open3d.draw_geometries([point_cloud])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
